@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-16T08:14:00Z",
-  "count_outdated" : 164,
-  "uniques_outdated" : 138,
-  "count" : 170,
-  "uniques" : 144,
+  "timestamp" : "2023-08-17T08:13:44Z",
+  "count_outdated" : 165,
+  "uniques_outdated" : 139,
+  "count" : 171,
+  "uniques" : 145,
   "clones" : [
-    {
-      "timestamp": "2023-08-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-04T00:00:00Z",
       "count": 1,
@@ -52,6 +43,15 @@
     },
     {
       "timestamp": "2023-08-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-17T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
